2000-11-01  Kevin Buettner  <kevinb@redhat.com>

	* symm-nat.c (print_1167_regs): Remove extraneous blank line
	after function declarator.
	* symtab.c (search_symbols): Likewise.
	* ultra3-nat.c (fetch_core_registers): Protoize.

2000-10-30  Michael Snyder  <msnyder@cleaver.cygnus.com>

	* config/sh/tm-linux.h: New file.  Include generic tm-linux.h, 
	plus tm-sh.h, then define SVR4_FETCH_LINK_MAP_OFFSETS to use
	the sh target function instead of the default link map offsets.
	* config/sh/sh.mt: Add solib.o and solib-svr4.o to TDEPFILES.
	Use sh/tm-linux.h instead of sh/tm-sh.h.
	* sh-tdep.c (sh_linux_svr4_fetch_link_map_offsets): 
	New function.  Construct target-specific link map offsets.
	* i386-linux-tdep.c (i386_linux_svr4_fetch_link_map_offsets:
	New function.  Construct target-specific link map offsets.
	* config/i386/tm-linux.h: Use above function instead of default.

2000-10-30  Michael Snyder  <msnyder@cleaver.cygnus.com>

	* config/i386/tm-linux.h: Remove definition of SVR4_SHARED_LIBS,
	and inclusion of solib.h.  Move up into ../tm-linux.h.
	config/tm-linux.h: Define SVR4_SHARED_LIBS, include solib.h.

2000-10-30  Kevin Buettner  <kevinb@redhat.com>

	* top.c (simplified_command_loop, add_info, add_com,
	help_command): Protoize.
	* ui-out.c (gdb_query): Protoize.

2000-10-30  Kevin Buettner  <kevinb@redhat.com>

	Changes based on analysis from Peter Schauer:
	* solist.h (struct so_list): Remove field lmend.
	(struct target_so_ops): Remove field lm_addr.  Add field
	relocate_section_addresses.  Add comments for all fields
	in this structure
	(TARGET_SO_LM_ADDR): Remove.
	(TARGET_SO_RELOCATE_SECTION_ADDRESSES): New macro.
	* solib-svr4.c (svr4_relocate_section_addresses): New function.
	(_initialize_svr4_solib): Remove lm_addr initialization.  Add
	initialization for relocate_section_addresses.
	* solib.c (solib_map_sections): Invoke 
	TARGET_SO_RELOCATE_SECTION_ADDRESSES instead of using now
	defunct TARGET_SO_LM_ADDR to relocate the section addresses.